# raytracer

./: .dockerignore  .env  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
cloud_runner/: CMakeLists.txt  README.md  requirements.txt  runner.py
deployment/: CMakeLists.txt
deployment/raytracer_cli/: Dockerfile  Dockerfile.base  run.sh
headers/: algorithms_playground.h  box.h  camera.h  color.h  constants.h  default_materials.h  frame.h  intersect.h  jobs.h  jpeg.h  mandlebrot.h  material.h  node.h  outputimage.h  plane.h  profile.h  queue.h  ray.h  scene.h  shape.h  shape_transform.h  sphere.h  strutil.h  trace.h  transform.h  uv.h  vec3.h  viewport.h
lnf/: CMakeLists.txt  box.h  bvh.h  camera.h  color.h  constants.h  default_materials.h  example_scenes.h  frame.h  intersect.h  jobs.h  jpeg.h  loader.h  marched_bubbles.h  marched_mandle.h  marched_materials.h  marched_node.h  marched_sphere.h  material.h  mesh.h  node.h  outputimage.h  plane.h  primitive.h  queue.h  random.h  ray.h  resource.h  scene.h  signed_distance_functions.h  simple_camera.h  simple_scene.h  smoke_box.h  sphere.h  stats.h  trace.h  transform.h  triangle.h  uv.h  vec3.h  (+1 more)
lost_n_found.xcodeproj/: project.pbxproj
lost_n_found.xcodeproj/project.xcworkspace/xcuserdata/arno.duvenhage.xcuserdatad/: UserInterfaceState.xcuserstate
lost_n_found.xcodeproj/xcuserdata/arno.duvenhage.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
lost_n_found.xcodeproj/xcuserdata/arno.duvenhage.xcuserdatad/xcschemes/: Test.xcscheme  xcschememanagement.plist
lostnfound.xcodeproj/: project.pbxproj
lostnfound.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lostnfound.xcodeproj/project.xcworkspace/xcuserdata/arno.duvenhage.xcuserdatad/: UserInterfaceState.xcuserstate
lostnfound.xcodeproj/xcuserdata/arno.duvenhage.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
lostnfound.xcodeproj/xcuserdata/arno.duvenhage.xcuserdatad/xcschemes/: xcschememanagement.plist
pages/: CMakeLists.txt  axis.md  bvh.md  camera.md  cmake.md  compiler_settings.md  docker-machine.md  jobs.md  profiling.md  qt.md  random.md  raytracing.md  raytracing_advanced.md
raytracer/: CMakeLists.txt  main.cpp
raytracer_cli/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  bvh.h  camera.h  intersect.h  loader.h  material.h  primitive.h  resource.h  scene.h
src/core/: CMakeLists.txt  bvh.h  color.h  constants.h  image.h  jobs.h  memory.h  outputimage.h  profile.h  queue.h  random.h  ray.h  scattered_ray.h  stats.h  strutil.h  uv.h  vec3.h  viewport.h
src/detail/: CMakeLists.txt  assimp_mesh.h  basic_materials.h  box.h  default_materials.h  example_scenes.h  fractal_materials.h  mandlebrot.h  marched_blob.h  marched_bubbles.h  marched_mandle.h  marched_materials.h  marched_sphere.h  marched_torus.h  mesh.h  plane.h  scatter_materials.h  signed_distance_functions.h  simple_camera.h  simple_scene.h  smoke_box.h  special_materials.h  sphere.h  tex_materials.h
src/systems/: CMakeLists.txt  frame.h  jobs.h  trace.h
src/utils/: CMakeLists.txt  jpeg.h  mandlebrot.h  signed_distance_functions.h
